renamed diary to project
